Make connection pooling code shareable to different routers
Refactor connection pooling code in connectionpool.h and code
file. Move pooling callback out of GWPROTOCOL such that it keeps
clean from upstream change, and use CONN_POOL_FUNC for better
scoping. This way, different routers will share common connection
pooling code.

--- a/server/modules/routing/CMakeLists.txt
+++ b/server/modules/routing/CMakeLists.txt
@@ -5,6 +5,10 @@ if(BUILD_TESTS)
   install(TARGETS testroute DESTINATION ${MAXSCALE_LIBDIR})
 endif()
 
+add_library(connectionpool SHARED connectionpool.c)
+target_link_libraries(connectionpool log_manager)
+install(TARGETS connectionpool DESTINATION ${MAXSCALE_LIBDIR})
+
 add_library(readconnroute SHARED readconnroute.c)
 target_link_libraries(readconnroute log_manager)
 install(TARGETS readconnroute DESTINATION ${MAXSCALE_LIBDIR})
